[package]
name = "daily_tweet"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
futures = "0.3.31"
rand = "0.8.5"
reqwest = {version="0.12.8", features=["json","multipart","stream","blocking"]}
reqwest-oauth1 = "0.3.0"
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }
